# lolly-mobile

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
bridge-overrides/: capabilities-provided.js  export.js  state.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
